<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:ads="http://schemas.android.com/apk/res-auto"

    android:id="@+id/Scroll"
    android:background="@drawable/greenbg"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    >

<LinearLayout 
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"></LinearLayout>

	<RelativeLayout
	    android:id="@+id/RelativeLayout01"
	    android:layout_width="match_parent"
	    android:layout_height="fill_parent" 
	     >

	    <TextView
	        android:id="@+id/team1Score"
	        android:focusable="true"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="10dp"	
	        android:background="#0000FF"
			android:textColor="#FFFFFF"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

	    <TextView
	        android:id="@+id/round"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"	        	
	        android:text="@string/Round"
	        android:textColor="#FFFFFF"
	        android:layout_centerInParent="true"
	     
	        android:textAppearance="?android:attr/textAppearanceLarge" />

	    <TextView
	        android:id="@+id/team2Score"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentTop="true"
	        android:padding="10dp"
	        android:background="#0000FF"
			android:textColor="#FFFFFF"
	        android:textAppearance="?android:attr/textAppearanceLarge" 
	        />
	    

	    
	</RelativeLayout>
    <View
 		android:layout_width="match_parent"
 		android:layout_height="1dp"
		 android:background="@android:color/white" />
    
<TextView
    android:id="@+id/team1"
    			android:textColor="#FFFFFF"
    
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Team1"
	android:paddingTop="10dp"
    android:textAppearance="?android:attr/textAppearanceLarge" />
	<RelativeLayout	    	    
	    android:id="@+id/RelativeLayout02"
	    android:layout_width="match_parent"
	    android:layout_height="fill_parent"  
	    android:paddingTop="20dp" >

			<EditText
			    android:id="@+id/points1"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignParentTop="true"
			    android:layout_centerHorizontal="true"
			    android:ems="10"
			    android:inputType="number" />

			<TextView
			    android:id="@+id/textView2"
			   android:textColor="#FFFFFF"
			    
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignBaseline="@+id/points1"
			    android:layout_alignBottom="@+id/points1"
			    android:layout_alignParentLeft="true"
			    android:text="@string/text_Points"
				 />

 	 </RelativeLayout>
		
	<RelativeLayout
	    android:id="@+id/RelativeLayout03"
	    android:layout_width="match_parent"
	    android:layout_height="fill_parent"  
	    android:paddingTop="20dp" >

			<EditText
			    android:id="@+id/xeres1"			    			  
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignParentBottom="true"
			    android:layout_centerHorizontal="true"
			    android:ems="10"
			    android:inputType="number" >

			   
			</EditText>

			<TextView
			    android:id="@+id/textView3"
			    android:textColor="#FFFFFF"			
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignBaseline="@+id/xeres1"
			    android:layout_alignBottom="@+id/xeres1"
			    android:layout_alignParentLeft="true"
			    android:text="@string/text_Xeres" />

		 </RelativeLayout>
<CheckBox
    android:id="@+id/filla1check"
    			android:textColor="#FFFFFF"
    
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/text_Filla" 
   
    />

   <View
 		android:layout_width="match_parent"
 		android:layout_height="1dp"
		 android:background="@android:color/white" />
<TextView
    android:id="@+id/team2"
    			android:textColor="#FFFFFF"
    
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Team2"
	android:paddingTop="10dp"
    android:textAppearance="?android:attr/textAppearanceLarge" />
<RelativeLayout
	    android:id="@+id/RelativeLayout06"
	    android:layout_width="match_parent"
	    android:layout_height="fill_parent"  
	    android:paddingTop="20dp" >

			<EditText
			    android:id="@+id/points2"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignParentTop="true"
			    android:layout_centerHorizontal="true"
			    android:ems="10"
			    android:clickable="false" 
      		    android:cursorVisible="false" 
        		android:focusable="false" 
       			 android:focusableInTouchMode="false"
			    android:inputType="number" />

			<TextView
			    android:id="@+id/textView5"
			    			android:textColor="#FFFFFF"
			    
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignBaseline="@+id/points2"
			    android:layout_alignBottom="@+id/points2"
			    android:layout_alignParentLeft="true"
			    android:text="@string/text_Points" />

 	 </RelativeLayout>
		
	<RelativeLayout
	    android:id="@+id/RelativeLayout04"
	    android:layout_width="match_parent"
	    android:layout_height="fill_parent"  
	    android:paddingTop="20dp" >

			<EditText
			    android:id="@+id/xeres2"			    			   			   	    
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignParentBottom="true"
			    android:layout_centerHorizontal="true"
			    android:ems="10"
			    android:inputType="number" >

			   
			</EditText>

			<TextView
			    android:id="@+id/textView7"
			    			android:textColor="#FFFFFF"
			    
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignBaseline="@+id/xeres2"
			    android:layout_alignBottom="@+id/xeres2"
			    android:layout_alignParentLeft="true"
			    android:text="@string/text_Xeres" />

		 </RelativeLayout>
<CheckBox
    android:id="@+id/filla2check"
    android:textColor="#FFFFFF" 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/text_Filla" 
    
    />>

<Button
    android:id="@+id/button1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:text="@string/next" 
    android:onClick="buttonClicked"
    />

<com.google.android.gms.ads.AdView android:id="@+id/adView"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           ads:adSize="BANNER"                   
                           
                           ads:adUnitId="ca-app-pub-9464597938461177/8881937835"/>


</LinearLayout>



</ScrollView>

